--- a/html/signup.htm
+++ b/html/signup.htm
@@ -9,51 +9,51 @@
     <title>SIGN-UP FORM</title>
 </head>
 <body>
-    <div class="top">
+    <div class="signuptop">
         <h2>Sign Up Form</h2>
     </div>
 
-    <div class="main">
+    <div class="signupmain">
 
-        <!-- row 1 Name -->
-        <div class="row">
-            <div class="leftside">
-                <p class="name">Name</p>
+        <!-- suprow 1 Name -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supname">Name</p>
             </div>
-            <div class="rightside">
-                <input type="text" class="inputlabel" placeholder="username">
+            <div class="suprightside">
+                <input type="text" class="supinputlabel" placeholder="username">
             </div>
         </div>
 
-        <!-- row 2 Password-->
-        <div class="row">
-            <div class="leftside">
-                <p class="password">Password</p>
+        <!-- suprow 2 Password-->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="suppassword">Password</p>
             </div>
-            <div class="rightside">
-                <input type="text" class="inputlabel">
-               <p class="textunderpassword">max 16 characters</p> 
-            </div>
-        </div>
-
-        <!-- row 3 Confirm password-->
-        <div class="row">
-            <div class="leftside">
-                <p class="confirmpassword">Confirm Password</p>
-            </div>
-            <div class="rightside">
-                <input type="text" class="inputlabel" placeholder="Re-type password">
+            <div class="suprightside">
+                <input type="text" class="supinputlabel">
+               <p class="suptextunderpassword">max 16 characters</p> 
             </div>
         </div>
 
-        <!-- row 4 Gender -->
-        <div class="row">
-            <div class="leftside">
-                <p class="gendertext">Gender</p>
+        <!-- suprow 3 Confirm password-->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supconfirmpassword">Confirm Password</p>
             </div>
-            <div class="rightside">
+            <div class="suprightside">
+                <input type="text" class="supinputlabel" placeholder="Re-type password">
+            </div>
+        </div>
+
+        <!-- suprow 4 Gender -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supgendertext">Gender</p>
+            </div>
+            <div class="suprightside">
                 <label>
-                    <input class="gender" type="radio" name="gender" id="" value="male" > Male
+                    <input class="supgender" type="radio" name="gender" id="" value="male" > Male
                 </label> &nbsp; &nbsp;
                 <label>
                     <input type="radio" name="gender" id="" value="female"> Female
@@ -61,43 +61,43 @@
             </div>
         </div>
 
-        <!-- row 5 DOB -->
-        <div class="row">
-            <div class="leftside">
-                <p class="dobtext">DOB</p>
+        <!-- suprow 5 DOB -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supdobtext">DOB</p>
             </div>
-            <div class="rightside">
-                <input class="inputlabel" type="date" id="">
-            </div>
-        </div>
-
-        <!-- row 6 file upload -->
-        <div class="row">
-            <div class="leftside">
-                <p class="phototext">Photo</p>
-            </div>
-            <div class="rightside">
-                <input class="inputlabel" type="file" id="">
+            <div class="suprightside">
+                <input class="supinputlabel" type="supdate" id="">
             </div>
         </div>
 
-        <!-- row 7 Address -->
-        <div class="row">
-            <div class="leftside">
-                <p class="addresstext">Address</p>
+        <!-- suprow 6 file upload -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supphototext">Photo</p>
             </div>
-            <div class="rightside">
-                <textarea name="address" id="filladdress" cols="48" rows="3"></textarea>
+            <div class="suprightside">
+                <input class="supinputlabel" type="supfile" id="">
             </div>
         </div>
 
-        <!-- row 8 Country -->
-        <div class="row">
-            <div class="leftside">
-                <p class="countrytext">Country</p>
+        <!-- suprow 7 Address -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supaddresstext">Address</p>
             </div>
-            <div class="rightside">
-                <select class="country" name="country" id="">
+            <div class="suprightside">
+                <textarea name="address" id="supfilladdress" cols="48" rows="3"></textarea>
+            </div>
+        </div>
+
+        <!-- suprow 8 Country -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supcountrytext">Country</p>
+            </div>
+            <div class="suprightside">
+                <select class="supcountry" name="country" id="">
                     <option value="INDIA">INDIA</option>
                     <option value="USA">USA</option>
                     <option value="JAPAN">JAPAN</option>
@@ -106,32 +106,32 @@
             </div>
         </div>
 
-        <!-- row 9 Mobile Number -->
-        <div class="row">
-            <div class="leftside">
-                <p class="mobile">Mobile Number</p>
+        <!-- suprow 9 Mobile Number -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supmobile">Mobile Number</p>
             </div>
-            <div class="rightside">
-                <input class="inputlabel" type="text" placeholder="Mobile Number">
-            </div>
-        </div>
-
-        <!-- row 10 Email id -->
-        <div class="row">
-            <div class="leftside">
-                <p class="email">Email Id</p>
-            </div>
-            <div class="rightside">
-                <input class="inputlabel" type="text" placeholder="user@domain.com">
+            <div class="suprightside">
+                <input class="supinputlabel" type="text" placeholder="Mobile Number">
             </div>
         </div>
 
-        <!-- row 11 Languages -->
-        <div class="row">
-            <div class="leftside">
-                <p class="langtext">Languages Known</p>
+        <!-- suprow 10 Email id -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supemail">Email Id</p>
             </div>
-            <div class="rightside">
+            <div class="suprightside">
+                <input class="supinputlabel" type="text" placeholder="user@domain.com">
+            </div>
+        </div>
+
+        <!-- suprow 11 Languages -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="suplangtext">Languages Known</p>
+            </div>
+            <div class="suprightside">
                 <select name="language" id="language" multiple>
                     <option value="ENGLSIH">ENGLISH</option>
                     <option value="HINDI">HINDI</option>
@@ -141,24 +141,24 @@
             </div>
         </div>
 
-        <!-- row 12 Checkbox -->
-        <div class="row">
-            <div class="leftside">
-                <p class="checktext">Check the box</p>
+        <!-- suprow 12 Checkbox -->
+        <div class="suprow">
+            <div class="supleftside">
+                <p class="supchecktext">Check the box</p>
             </div>
-            <div class="checkboxrightside">
-                <div class="checkbox">
-                    <input type="checkbox" id="box" name="box">
+            <div class="supcheckboxsuprightside">
+                <div class="supcheckbox">
+                    <input type="checkbox" id="supbox" name="box">
                 </div>
                 <div>
-                    <p class="checkboxtext">I accept the criteria</p>
+                    <p class="supcheckboxtext">I accept the criteria</p>
                 </div> 
             </div>
         </div>
 
         <!-- Submit -->
-        <div class="submit">
-            <button class="button" > Submit </button>
+        <div>
+            <button class="supbutton" > Submit </button>
         </div>
 
     </div>
