--- a/html/horizontalnavigation.html
+++ b/html/horizontalnavigation.html
@@ -5,39 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horizontal navigation bar</title>
-    <link rel="stylesheet" href="/horizontalnavigation.css">
-    <link rel="stylesheet" href="fontawesome/css/all.css">
-    <link rel="stylesheet" href="fontawesome/css/regular.css">
-    <link rel="stylesheet" href="fontawesome/css/fontawesome.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="/css/horizontalnavigation.css">
+    <link rel="stylesheet" href="/fontawesome/css/all.css">
+    <link rel="stylesheet" href="/fontawesome/css/regular.css">
+    <link rel="stylesheet" href="/fontawesome/css/fontawesome.css">
+    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
 </head>
 <body>
     <div class="horizontalmenu">
-        <div class="lefticon">
-            <img src="/letter-a.png" alt="" class="icon">
+
+        <div class="hnleftmenu">
+            <span class="hniconstyle">
+                <i class="fas fa-bars "></i>
+            </span>
+            <span class="hniconstyle">
+                <i class="fas fa-envelope"></i>
+            </span>
+            <span class="hniconstyle">
+                <i class="fas fa-check-circle"></i>
+            </span>
+            <span class="hniconstyle">
+                <i class="fas fa-ellipsis-v"></i>
+            </span>
         </div>
-        <div class="profile">
-            <div class="left">
-                <span class="fas fa-bars iconstyle"></span>
-                <span class="fas fa-envelope iconstyle"></span>
-                <span class="fas fa-check-circle iconstyle"></span>
-                <p class="text">Mega</p>
-                <span class="fas fa-ellipsis-v iconstyle4"></span>
-            </div>
-            <div class="right">
-                <div class="search">
-                    <div>
-                        <input type="search" class="searchbar" placeholder="Search...">
-                    </div>
-                    <div>
-                        <a href=""><span class="fas fa-search searchbutton"></span></a>
-                    </div>
+
+        <div class="hnrightmenu">
+            <div class="hnsearch">
+                <div>
+                    <input type="search" class="hnsearchbar" placeholder="Search...">
                 </div>
-                <img src="/profile.png" class="profilepic" alt="">
-                <p class="username">Steve</p>
-                <span class="fas fa-chevron-down downarrow"></span>
+                <div>
+                    <a href=""><span class="fas fa-search hnsearchbutton"></span></a>
+                </div>
             </div>
+            <img src="/images/profile.png" class="hnprofilepic">
+            <p class="hnusername">Vishnu</p>
+            <span class="hndownarrow">
+                <i class="fas fa-chevron-down"></i>
+            </span>
         </div>
+
     </div>
+
 </body>
 </html>
