Adding Bootstrap DB

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/horizontalnavigation.css">
     <link rel="stylesheet" href="/css/loginpage1.css">
-    <link rel="stylesheet" href="css/loginpage2.css">
-    <link rel="stylesheet" href="css/signup.css">
-    <link rel="stylesheet" href="css/cards&table.css">
+    <link rel="stylesheet" href="/css/loginpage2.css">
+    <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="/css/cards&table.css">
     <link rel="stylesheet" href="/fontawesome/css/all.css">
     <link rel="stylesheet" href="/fontawesome/css/regular.css">
     <link rel="stylesheet" href="/fontawesome/css/fontawesome.css">
@@ -84,6 +86,17 @@
                     <span class="fas fa-chevron-right sbimageright"></span>
                 </li>
 
+                <li>
+                    <div class="sbrowleft" onclick="accessValidationForm()">
+                        <span class="sbimageleft">
+                            <i class="fas fa-cart-shopping"></i>
+                        </span>
+                        <p class="sbmenutext">Validation Form</p>
+                    </div>
+
+                    <span class="fas fa-chevron-right sbimageright"></span>
+                </li>
+
             </ul>
 
         </div>
@@ -117,7 +130,7 @@
                         </div>
                     </div>
                     <img src="/images/profile.png" class="hnprofilepic">
-                    <p class="hnusername">Vishnu</p>
+                    <p class="hnusername mb-0">Vishnu</p>
                     <span class="hndownarrow">
                         <i class="fas fa-chevron-down"></i>
                     </span>
@@ -134,9 +147,9 @@
                     <div class="login1right">
                         <div class="login1st">
 
-                            <div class="login1part1">
-                                <h4>Welcome back</h4>
-                                <h2>Login to your account</h2>
+                            <div class="login1part1 mb-4">
+                                <h6>Welcome back</h6>
+                                <h4>Login to your account</h4>
                             </div>
 
                             <div class="login1part2">
@@ -399,13 +412,13 @@
                 </div>
             </section>
 
-            <section id="dashboard" class="content-block">
+            <section id="dashboard" class="content-block hide-block">
                 <div class="cards">
                     <h2 class="headertext">Cards</h2>
 
                     <div class="uppercards">
                         <li class="upperbox sidemenu">
-                            <div class="upperboxtop">
+                            <div class="upperboxtop mt-2">
                                 <span class="socialicons">
                                     <i class="fa-brands fa-instagram"></i>
                                 </span>
@@ -418,11 +431,11 @@
                                 ywue martin
                             </p>
 
-                            <a href="" class="socialtext">Learn More</a>
+                            <a href="" class="socialtext mb-2">Learn More</a>
                         </li>
 
                         <li class="upperbox sidemenu">
-                            <div class="upperboxtop">
+                            <div class="upperboxtop mt-2">
                                 <span class="socialicons">
                                     <i class="fa-brands fa-twitter"></i>
                                 </span>
@@ -435,11 +448,11 @@
                                 ywue martin
                             </p>
 
-                            <a href="" class="socialtext">Learn More</a>
+                            <a href="" class="socialtext mb-2">Learn More</a>
                         </li>
 
                         <li class="upperbox sidemenu">
-                            <div class="upperboxtop">
+                            <div class="upperboxtop mt-2">
                                 <span class="socialicons">
                                     <i class="fa-brands fa-facebook-f"></i>
                                 </span>
@@ -452,11 +465,11 @@
                                 ywue martin
                             </p>
 
-                            <a href="" class="socialtext">Learn More</a>
+                            <a href="" class="socialtext mb-2">Learn More</a>
                         </li>
 
                         <li class="upperbox sidemenu">
-                            <div class="upperboxtop">
+                            <div class="upperboxtop mt-2">
                                 <span class="socialicons">
                                     <i class="fa-brands fa-whatsapp"></i>
                                 </span>
@@ -469,7 +482,7 @@
                                 ywue martin
                             </p>
 
-                            <a href="" class="socialtext">Learn More</a>
+                            <a href="" class="socialtext mb-2">Learn More</a>
                         </li>
 
 
@@ -482,7 +495,7 @@
                             </div>
                             <div class="imagedown">
                                 <div class="profilename">
-                                    <h4 class="socialtext headercolor">Jean Torres</h4>
+                                    <h4 class="socialtext headercolor mb-0">Jean Torres</h4>
                                     <p class="socialtext">Marketing</p>
                                 </div>
                                 <p class="downtext">Lorem, ipsum dolor sit amet wdedr
@@ -509,7 +522,7 @@
                             </div>
                             <div class="imagedown">
                                 <div class="profilename">
-                                    <h4 class="socialtext headercolor">Doris Meyer</h4>
+                                    <h4 class="socialtext headercolor mb-0">Doris Meyer</h4>
                                     <p class="socialtext">Product Manager</p>
                                 </div>
                                 <p class="downtext">Lorem, ipsum dolor sit amet wdedr
@@ -533,7 +546,7 @@
                             </div>
                             <div class="imagedown">
                                 <div class="profilename">
-                                    <h4 class="socialtext headercolor">Ronald Reid</h4>
+                                    <h4 class="socialtext headercolor mb-0">Ronald Reid</h4>
                                     <p class="socialtext">iOS Developer</p>
                                 </div>
                                 <p class="downtext">Lorem, ipsum dolor sit amet wdedr
@@ -560,7 +573,7 @@
                             </div>
                             <div class="imagedown">
                                 <div class="profilename">
-                                    <h4 class="socialtext headercolor">Jean Torres</h4>
+                                    <h4 class="socialtext headercolor mb-0">Jean Torres</h4>
                                     <p class="socialtext">Business Analyst</p>
                                 </div>
                                 <p class="downtext">Lorem, ipsum dolor sit amet wdedr
@@ -679,11 +692,74 @@
                 </div>
             </section>
 
+            <section id="validationForm" class="hide-block">
+                <div class="container form-group mt-5">
+                    <div class="row">
+                        <div class="col-6 mb-2">
+                            <label for="">Email</label>
+                            <input class="form-control" type="text" name="" id="email" placeholder="Enter email">
+                            <small id="email-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Password</label>
+                            <input class="form-control" type="text" name="" id="password" placeholder="Password">
+                            <small id="password-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Mobile Number</label>
+                            <input class="form-control" type="text" name="" id="mobileNumber" placeholder="Mobile number">
+                            <small id="mobile-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Pan Number</label>
+                            <input class="form-control" type="text" name="" id="panNumber" placeholder="Pan number">
+                            <small id="pan-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Zip Code</label>
+                            <input class="form-control" type="text" name="" id="zipCode" placeholder="Zip code">
+                            <small id="zip-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Date</label>
+                            <input class="form-control" type="text" name="" id="date" placeholder="Enter date">
+                            <small id="date-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Website</label>
+                            <input class="form-control" type="text" name="" id="website" placeholder="Website">
+                            <small id="website-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">First Name</label>
+                            <input class="form-control" type="text" name="" id="firstName" placeholder="first name">
+                            <small id="firstname-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Number</label>
+                            <input class="form-control" type="text" name="" id="number" placeholder="Enter a number">
+                            <small id="number-text"></small>
+                        </div>
+                        <div class="col-6 mb-2">
+                            <label for="">Address</label>
+                            <input class="form-control" type="text" name="" id="address" placeholder="3/0 chickent street.....">
+                            <small id="address-text"></small>
+                        </div>
+                    </div>
+                    <button type="button" id="validate-button" class="btn btn-primary m-auto mt-2"
+                        onclick="validateForm()">Validate</button>
+                    <p id="result"></p>
+            
+                </div>
+            </section>
+
         </div>
 
     </section>
 
     <script src="index.js"></script>
+    <script src="/js/validateForm.js"></script>
+    <script src="/js/validateAll.js"></script>
 </body>
 
 </html>
